--- a/github/회원가입.html
+++ b/github/회원가입.html
@@ -9,18 +9,27 @@
 
 <body>
     <label>ID</label><input type="text" onchange="inp_id()" id="inp" /> <br />
-    <label>PW</label><input type="password" /> <br />
+    <label>PW</label><input type="password" onchange="inp_pw()" id="inp2" /> <br />
     <label>선택</label>
     <input type="radio" name="nat" /> 내국인
     <input type="radio" name="nat" /> 외국인 <br />
 
     <script>
-        // 유효성 검사
+        // id 유효성 검사
         function inp_id() {
             const target = document.getElementById('inp').value;
             if (target.trim().length == 0) {
                 return false;
                 alert('아이디를 입력해주세요.');
+            }
+            return true;
+        }
+        // pw 유효성 검사
+        function inp_pw() {
+            const target = document.getElementById('inp2').value;
+            if (target.trim().length == 0) {
+                return false;
+                alert('비밀번호를 입력해주세요.');
             }
             return true;
         }
