--- a/github/회원가입.html
+++ b/github/회원가입.html
@@ -11,8 +11,8 @@
     <label>ID</label><input type="text" onchange="inp_id()" id="inp" /> <br />
     <label>PW</label><input type="password" onchange="inp_pw()" id="inp2" /> <br />
     <label>선택</label>
-    <input type="radio" name="nat" /> 내국인
-    <input type="radio" name="nat" /> 외국인 <br />
+    <input type="radio" name="nat" onchange="fn_nat()" id="inp3" /> 내국인
+    <input type="radio" name="nat" onchange="fn_nat()" id="inp3" /> 외국인 <br />
 
     <script>
         // id 유효성 검사
@@ -32,6 +32,17 @@
                 alert('비밀번호를 입력해주세요.');
             }
             return true;
+        }
+        // radio 유효성 검사
+        function fn_nat() {
+            const target = document.getElementsByName('nat');
+            for (let i = 0; i< tar.length;i++) {
+                if(tar[i].checked) {
+                    return true;
+                }
+            }
+            alert('라디오를 선택해 주세요.');
+            return false;
         }
     </script>
 </body>
