--- a/github/회원가입.html
+++ b/github/회원가입.html
@@ -14,6 +14,7 @@
     <input type="radio" name="nat" onchange="fn_nat()" id="inp3" /> 내국인
     <input type="radio" name="nat" onchange="fn_nat()" id="inp3" /> 외국인 <br />
 
+    <input type="button" value="제출" onclick="joinAction()" />
     <script>
         // id 유효성 검사
         function inp_id() {
@@ -36,8 +37,8 @@
         // radio 유효성 검사
         function fn_nat() {
             const target = document.getElementsByName('nat');
-            for (let i = 0; i< tar.length;i++) {
-                if(tar[i].checked) {
+            for (let i = 0; i < tar.length; i++) {
+                if (tar[i].checked) {
                     return true;
                 }
             }
